# dvc-demo

./: README.md  dvc.yaml  pyproject.toml  requirements.txt
dvc_demo/: dvc.yaml  params.yaml
dvc_demo/code/: data_statistics.py  evaluate_model.py  split_data.py  train_model.py
dvc_demo/data/: data.csv.dvc
dvc_demo/data/model/: .gitignore
dvc_demo/data/model/evaluation/: .gitignore
dvc_demo/data/models/: classification_report.json
dvc_demo/data/processed/statistics/train/: .gitignore
dvc_demo/data/raw/: data.csv.dvc
dvc_demo/models/: .gitignore
